# dawg

gui/Modules/: CMakeUserUseBison.cmake  CMakeUserUseFlex.cmake  NSIS.template.in
gui/src/: CMakeLists.txt
gui/src/gui/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  block.cpp  block.h  bool.cpp  bool.h  dawgma.xmh  double.cpp  double.h  frame.cpp  frame.h  gui.cpp  gui.h  int.cpp  int.h  page.cpp  page.h  panel.cpp  panel.h  text.cpp  text.h  vdouble.cpp  vdouble.h  vint.cpp  vint.h  vtext.cpp  vtext.h  xm.h
src/include/dawg/: rate.h  residue.h  root.h  subst.h
src/include/dawg/utils/: aliastable.h
src/lib/: matic.cpp  models.cpp
tests/: CMakeLists.txt
tests/Dawg/: RunTest.cmake.in
